--- a/Back/properties-service/src/main/resources/application.properties
+++ b/Back/properties-service/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url:jdbc:mysql://localhost:3306/final8-properties
 spring.datasource.username=root
-spring.datasource.password=@123=Lvf
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql: true
 spring.jpa.hibernate.ddl-auto=update
