--- a/Back/properties-service/src/main/resources/application.properties
+++ b/Back/properties-service/src/main/resources/application.properties
@@ -9,4 +9,5 @@ spring.jpa.properties.hibernate.format_sql=true
 ng.thymeleaf.cache: false
 server.port=8002
 spring.application.name=properties-service
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 
