--- a/Back/user-service/src/main/resources/application.properties
+++ b/Back/user-service/src/main/resources/application.properties
@@ -9,3 +9,4 @@ spring.jpa.properties.hibernate.format_sql=true
 ng.thymeleaf.cache: false
 server.port=8001
 spring.application.name=usuario-service
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
